--- a/blockhubedu-landing/.gitignore
+++ b/blockhubedu-landing/.gitignore
@@ -1,7 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# Node.js dependencies
+node_modules/
+npm-debug.log*
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,32 +9,45 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
 # next.js
 /.next/
 /out/
 
-# production
-/build
+# Build outputs
+dist/
+build/
 
-# misc
+# Static files cache
+.cache/
+
+# Environment variables
+.env
+.env*
+.env.local
+.env.*.local
+
+# Editor and OS files
 .DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
 *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
+# testing
+/coverage
 
 # vercel
 .vercel
 
+# debug
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+
