--- a/blockhubedu-landing/tsconfig.json
+++ b/blockhubedu-landing/tsconfig.json
@@ -28,6 +28,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/pages/_app.jsx", "src/pages/index.tsx", "src/pages/index.js", "src/pages/_app.js"  ],
   "exclude": ["node_modules"]
 }
