--- a/blockhubedu-landing/package.json
+++ b/blockhubedu-landing/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "browserslist": "^4.24.4",
     "gsap": "^3.12.7",
     "next": "15.1.6",
     "react": "^19.0.0",
