--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.3.0",
+    "gsap": "^3.12.7",
     "tailwindcss": "^4.0.6"
   }
 }
